--- a/locales/news/ro.json
+++ b/locales/news/ro.json
@@ -1,7 +1,9 @@
 {
     "values": {
-        "site_title": "Ultimele stiri din %s",
-        "site_description": "Toate știrile din %s. Evenimente, declarații, tendințe.",
+        "app_name": "Știri Ournet",
+        "short_app_name": "Știri",
+        "site_title": "Ultimele stiri din %{country}",
+        "site_description": "Toate știrile din %{country}. Evenimente, declarații, tendințe.",
         "language_ro": "Română",
         "country_md": "Moldova",
         "in_country_md": "Moldova",
@@ -16,52 +18,52 @@
         "exchange_rates": "Curs valutar",
         "contact": "Contact",
         "international": "Internațional",
-        "share_on_format": "Trimite pe %s",
+        "share_on_format": "Trimite pe %{name}",
         "views": "vizualizări",
         "images": "imagini",
         "photo": "Foto",
         "related_news": "Știri asemănătoare",
         "ads": "Publicitate",
         "latest_news": "Ultimele știri",
-        "page_topic_title": "%s - Ultimele stiri",
-        "topic_description": "Ultimele stiri si evenimente din presa despre %s",
+        "page_topic_title": "%{name} - Ultimele stiri",
+        "topic_description": "Ultimele stiri si evenimente din presa despre %{name}",
         "events": "Evenimente",
-        "topic_title": "Știri despre %s",
-        "topic_latest_news": "%s - Ultimele știri",
+        "topic_title": "Știri despre %{name}",
+        "topic_latest_news": "%{name} - Ultimele știri",
         "quotes": "Declarații",
         "24_hrs": "24 ore",
         "trending": "Tendințe",
-        "search_result": "Rezultate: %s",
+        "search_result": "Rezultate: %{name}",
         "more_events": "Mai multe evenimente",
-        "page_topic_quotes_title": "%s - Declaratii",
-        "page_topic_events_title": "%s - Evenimente",
+        "page_topic_quotes_title": "%{name} - Declaratii",
+        "page_topic_events_title": "%{name} - Evenimente",
         "more_quotes": "Mai multe declatații",
-        "quotes_by_author": "Declarații de %s",
-        "news_count": "%d știri",
+        "quotes_by_author": "Declarații de %{name}",
+        "news_count": "%n știri",
         "video": "Video",
-        "category_title": "%s - ultimele stiri",
+        "category_title": "%{name} - ultimele stiri",
         "news_sources": "Surse de stiri",
         "popular_news": "Știri populare",
         "latest_quotes_in_media": "Ultimele declarații din presă",
-        "latest_quotes_in_media_country_format": "Ultimele declarații/citate din presă - %s",
+        "latest_quotes_in_media_country_format": "Ultimele declarații/citate din presă - %{name}",
         "latest_quotes": "Ultimele declarații",
         "info": "Info",
         "useful": "Util",
         "popular": "Popular",
         "important": "Important",
         "video_news": "Video știri",
-        "read_more_on_source": "Citește pe %s",
-        "quotes_about": "%s - Declarații",
+        "read_more_on_source": "Citește pe %{name}",
+        "quotes_about": "%{name} - Declarații",
         "important_news": "Știri importante",
         "latest_events": "Ultimele evenimente",
-        "latest_events_from_country": "Ultimele evenimente din %s",
-        "events_from_country": "Evenimente din %s",
+        "latest_events_from_country": "Ultimele evenimente din %{name}",
+        "events_from_country": "Evenimente din %{name}",
         "more": "Mai mult",
         "horoscope": "Horoscop",
         "important_news_in_last_7days": "Știri importante în ultimele 7 zile",
-        "most_important_news_in_last_7days_country": "Cele mai importante știri din presa din %s pentru ultimele 7 zile",
-        "foto_video_from_event_format": "Foto și Video: %s",
-        "count_views_format": "%s vizualizări",
+        "most_important_news_in_last_7days_country": "Cele mai importante știri din presa din %{country} pentru ultimele 7 zile",
+        "foto_video_from_event_format": "Foto și Video: %{name}",
+        "count_views_format": "%n vizualizări",
         "error": "Eroare",
         "error_404_info": "Pagina nu a fost găsită",
         "error_500_info": "Eroare necunoscută"
