--- a/locales/news/ro.json
+++ b/locales/news/ro.json
@@ -45,7 +45,7 @@
         "news_sources": "Surse de stiri",
         "popular_news": "Știri populare",
         "latest_quotes_in_media": "Ultimele declarații din presă",
-        "latest_quotes_in_media_country_format": "Ultimele declarații/citate din presă - %{name}",
+        "latest_quotes_in_media_country_format": "Ultimele declarații/citate din presă - %{country}",
         "latest_quotes": "Ultimele declarații",
         "info": "Info",
         "useful": "Util",
