fix locale app name by project

--- a/locales/ro.json
+++ b/locales/ro.json
@@ -49,11 +49,13 @@
     "home": "Acasă",
     "horizontal": "Orizontal",
     "horo_api_title": "Preluare horoscop",
-    "horo_app_name": "Ournet Horoscop",
+    "horo_ro_app_name": "Ournet Horoscop",
+    "horo_ro_short_app_name": "Horoscop",
+    "horo_md_app_name": "Click Horoscop",
+    "horo_md_short_app_name": "Horoscop",
     "horo_notifications_subscribe_for_sign_format": "%(name)s: Primește notificări zilnice",
     "horo_on_your_site_info": "Horoscopul zilnic gratuit pe site-ul tău",
     "horo_on_your_site": "Horoscopul pe site-ul tău",
-    "horo_short_app_name": "Horoscop",
     "horo_sign_daily_details_format": "%(sign)s. Horoscopul zilei: %(date)s",
     "horo_sign_daily_title_format": "%(sign)s: Horoscopul zilei",
     "horo_sign_date_format": "D MMM",
@@ -96,8 +98,10 @@
     "more_quotes": "Mai multe declatații",
     "more": "Mai mult",
     "most_important_news_in_last_7days_country_format": "Cele mai importante știri din presa din %(country)s pentru ultimele 7 zile",
-    "news_app_name": "Ournet Știri",
-    "news_short_app_name": "Știri",
+    "news_ro_app_name": "Ournet Știri",
+    "news_ro_short_app_name": "Știri",
+    "news_md_app_name": "Click Știri",
+    "news_md_short_app_name": "Știri",
     "news_site_description_format": "Toate știrile din %(country)s. Evenimente, declarații, tendințe.",
     "news_site_title_format": "Ultimele știri din %(country)s",
     "news_sources": "Surse de știri",
@@ -113,8 +117,10 @@
     "places": "Locuri",
     "popular_news": "Știri populare",
     "popular": "Popular",
-    "portal_app_name": "Ournet",
-    "portal_short_app_name": "Ournet",
+    "portal_md_app_name": "Click.md",
+    "portal_md_short_app_name": "Click",
+    "portal_ro_app_name": "Ournet.ro",
+    "portal_ro_short_app_name": "Ournet",
     "portal_site_description_format": "Toate știrile din %(country)s. Evenimente, declarații, tendințe.",
     "portal_site_title_format": "Ultimele știri din %(country)s",
     "position": "Poziție",
@@ -150,7 +156,10 @@
     "video_news": "Video știri",
     "video": "Video",
     "views": "vizualizări",
-    "weather_app_name": "Ournet Meteo",
+    "weather_ro_app_name": "Ournet Meteo",
+    "weather_ro_short_app_name": "Meteo",
+    "weather_md_app_name": "Click Meteo",
+    "weather_md_short_app_name": "Meteo",
     "weather_cright": "Prognoza meteo oferită de met.no",
     "weather_for_10days": "Prognoza meteo pentru 10 zile",
     "weather_home_title_format": "Vremea in %(name)s pentru 10 zile",
@@ -163,7 +172,6 @@
     "weather_place_details_info_format": "Prognoza meteo in %(name1)s, vremea la %(name2)s, azi, maine, poimaine, 3 zile, 7 zile, 10 zile, urmatoarele zile. Starea vremii in %(name3)s.",
     "weather_place_title_format_10days_format": "Vremea in %(name1)s, prognoza meteo in %(name2)s, 10 zile",
     "weather_place_title_format": "Vremea in %(name1)s, prognoza meteo in %(name2)s",
-    "weather_short_app_name": "Meteo",
     "weather": "Vremea",
     "weather2": "Meteo",
     "weekly_horoscope_details_format": "Horoscop săptămânal: %(date)s.",
