fix topic page title

--- a/locales/ro.json
+++ b/locales/ro.json
@@ -106,7 +106,7 @@
     "news_site_title_format": "Ultimele știri din %(country)s",
     "news_sources": "Surse de știri",
     "news_topic_description_format": "Ultimele știri și evenimente din presa despre %(name)s",
-    "news_topic_title_format": "Știri despre %(name)s",
+    "news_topic_page_title_format": "%(name)s - Ultimele știri",
     "news": "Știri",
     "no_days": "Nr. zile",
     "no_thanks": "Nu muțumesc",
@@ -147,7 +147,7 @@
     "tomorrow": "Mâine",
     "topic_events_title_format": "%(name)s - Evenimente",
     "topic_latest_news_format": "%(name)s - Ultimele știri",
-    "topic_news_title_format": "%(name)s - Ultimele stiri",
+    "topic_news_title_format": "Știri despre %(name)s",
     "topic_quotes_title_format": "%(name)s - Declaratii",
     "total_subscribers_format": "Total abonați: %d",
     "trending": "Tendințe",
