--- a/locales/ru.json
+++ b/locales/ru.json
@@ -106,7 +106,7 @@
     "news_site_title_format": "Новости: %(country)s",
     "news_sources": "Источники новостей",
     "news_topic_description_format": "%(name)s - Последние новости, события и дискуссии в прессе",
-    "news_topic_title_format": "%(name)s Новости",
+    "news_topic_page_title_format": "%(name)s - Последние новости",
     "news": "Новости",
     "no_days": "Дни",
     "no_thanks": "Нет, спасибо",
@@ -147,7 +147,7 @@
     "tomorrow": "Завтра",
     "topic_events_title_format": "%(name)s - События",
     "topic_latest_news_format": "%(name)s - Последние новости",
-    "topic_news_title_format": "%(name)s - Последние новости",
+    "topic_news_title_format": "%(name)s Новости",
     "topic_quotes_title_format": "%(name)s - Заявления",
     "total_subscribers_format": "Общее число абонентов: %d",
     "trending": "Тенденции",
