fix locale horo_app_name

--- a/locales/ro.json
+++ b/locales/ro.json
@@ -49,10 +49,10 @@
     "home": "Acasă",
     "horizontal": "Orizontal",
     "horo_api_title": "Preluare horoscop",
-    "horo_ro_app_name": "Ournet Horoscop",
-    "horo_ro_short_app_name": "Horoscop",
-    "horo_md_app_name": "Click Horoscop",
-    "horo_md_short_app_name": "Horoscop",
+    "horoscope_ro_app_name": "Ournet Horoscop",
+    "horoscope_ro_short_app_name": "Horoscop",
+    "horoscope_md_app_name": "Click Horoscop",
+    "horoscope_md_short_app_name": "Horoscop",
     "horo_notifications_subscribe_for_sign_format": "%(name)s: Primește notificări zilnice",
     "horo_on_your_site_info": "Horoscopul zilnic gratuit pe site-ul tău",
     "horo_on_your_site": "Horoscopul pe site-ul tău",
