--- a/locales/ru.json
+++ b/locales/ru.json
@@ -49,10 +49,10 @@
     "home": "Главная",
     "horizontal": "Горизонтально",
     "horo_api_title": "Экспорт гороскопов",
-    "horo_ru_app_name": "Zborg Гороскоп",
-    "horo_ru_short_app_name": "Гороскоп",
-    "horo_md_app_name": "Click Гороскоп",
-    "horo_md_short_app_name": "Гороскоп",
+    "horoscope_ru_app_name": "Zborg Гороскоп",
+    "horoscope_ru_short_app_name": "Гороскоп",
+    "horoscope_md_app_name": "Click Гороскоп",
+    "horoscope_md_short_app_name": "Гороскоп",
     "horo_notifications_subscribe_for_sign_format": "%(name)s: Получает ежедневные уведомления",
     "horo_on_your_site_info": "Бесплатный ежедневный гороскоп на вашем сайте",
     "horo_on_your_site": "Гороскоп на вашем сайте",
@@ -167,8 +167,8 @@
     "weather_in_format": "Погода в %(name)s",
     "weather_notifications_subscribe_for_place_format": "Подписаться на предупреждения о погоде: %(name)s",
     "weather_on_your_site_info_format": "Вставьте погодные информеры на вашем сайте для любого города/нас. пункта в %(country)s.",
-    "weather_on_your_site": "Vremea pe site-ul tău",
-    "weather_place_description_format": "Prognoza meteo in %(name1)s, vremea in %(name2)s - azi, maine, pentru 10 zile",
+    "weather_on_your_site": "Погода на вашем сайте",
+    "weather_place_description_format": "Прогноз погоды в %(name1)s, Погода: %(name2)s - сегодня, завтра, на 10 дней",
     "weather_place_details_info_format": "Погода в %(name1)s прогноз погоды %(name2)s на сегодня, завтра, завтра, 3 дня, 7 дней, 10 дней, в эти дни. Погода в %(name3)s. гисметео",
     "weather_place_title_format_10days_format": "Погода в %(name1)s, прогноз погоды - %(name2)s, 10 дней",
     "weather_place_title_format": "Погода в %(name1)s, прогноз погоды - %(name2)s",
