fix ru app name

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -156,8 +156,8 @@
     "video_news": "Видео новости",
     "video": "Видео",
     "views": "Просмотры",
-    "weather_ro_app_name": "Zborg Погода",
-    "weather_ro_short_app_name": "Погода",
+    "weather_ru_app_name": "Zborg Погода",
+    "weather_ru_short_app_name": "Погода",
     "weather_md_app_name": "Click Погода",
     "weather_md_short_app_name": "Погода",
     "weather_cright": "Прогноз погоды предоставляемый met.no",
