--- a/locales/ro.json
+++ b/locales/ro.json
@@ -137,7 +137,7 @@
     "search_place": "Caută localitate",
     "search_result_format": "Rezultate: %(name)s",
     "share_on_format": "Trimite pe %(name)s",
-    "share_with_your_friends": "Împarte cu pritenii tăi",
+    "share_with_your_friends": "Împarte cu prietenii tăi",
     "show_header": "Cu titlu",
     "subscribe_to_daily_notifications": "Abonează-te la notificări zilnice",
     "subscribe": "Abonare",
