--- a/locales/ro.json
+++ b/locales/ro.json
@@ -109,7 +109,7 @@
     "news_topic_page_title_format": "%(name)s - Ultimele știri",
     "news": "Știri",
     "no_days": "Nr. zile",
-    "no_thanks": "Nu muțumesc",
+    "no_thanks": "Nu mulțumesc",
     "not_found_places": "Nu am găsit nici o localitate.",
     "opinia": "Opinia",
     "photo": "Foto",
