--- a/locales/ro.json
+++ b/locales/ro.json
@@ -95,7 +95,7 @@
     "min": "min",
     "mm": "mm",
     "more_events": "Mai multe evenimente",
-    "more_quotes": "Mai multe declatații",
+    "more_quotes": "Mai multe declarații",
     "more": "Mai mult",
     "most_important_news_in_last_7days_country_format": "Cele mai importante știri din presa din %(country)s pentru ultimele 7 zile",
     "news_ro_app_name": "Ournet Știri",
