--- a/locales/hu.json
+++ b/locales/hu.json
@@ -26,8 +26,8 @@
     "daily_horoscope_format": "Horoszkóp: %(name)s",
     "daily_horoscope": "Hapi horoszkóp",
     "daily": "Napi",
-    "date_format": "MMMM, D",
-    "day_format": "dddd, MMM D",
+    "date_format": "D MMMM",
+    "day_format": "dddd, D MMMM",
     "days": "nap",
     "detailed_horoscope": "Részletes horoszkóp",
     "error_404_info": "Az oldal nem található",
@@ -56,7 +56,7 @@
     "horo_on_your_site": "Horoszkóp a webhelyén",
     "horo_sign_daily_details_format": "%(sign)s. A nap horoszkópja: %(date)s",
     "horo_sign_daily_title_format": "%(sign)s: Napi horoszkóp",
-    "horo_sign_date_format": "MMM, D",
+    "horo_sign_date_format": "D MMM",
     "horo_sign_weekly_details_format": "%(sign)s. A hét horoszkópja: %(date)s",
     "horo_sign_weekly_title_format": "%(sign)s: Heti horoszkóp",
     "horoscope": "Horoszkóp",
