credit to MET Norway

--- a/locales/bg.json
+++ b/locales/bg.json
@@ -151,7 +151,7 @@
     "views": "гледки",
     "weather_bg_app_name": "Ournet Времето",
     "weather_bg_short_app_name": "Времето",
-    "weather_cright": "Прогноза за времето, предоставена от met.no",
+    "weather_cright": "Прогноза за времето, предоставена от MET Norway",
     "weather_for_10days": "Прогноза за времето за 10 дни",
     "weather_home_title_format": "Времето в %(name)s за 10 дни",
     "weather_in_cn_summary_format": "Прогноза за времето в %(country)s за 10 дни на всяко място",
