--- a/locales/cs.json
+++ b/locales/cs.json
@@ -151,7 +151,7 @@
     "views": "pohledy",
     "weather_cz_app_name": "Ournet Počasí",
     "weather_cz_short_app_name": "Počasí",
-    "weather_cright": "Předpověď počasí poskytla met.no",
+    "weather_cright": "Předpověď počasí poskytla MET Norway",
     "weather_for_10days": "Předpověď počasí na 10 dní",
     "weather_home_title_format": "Počasí %(name)s po dobu 10 dnů",
     "weather_in_cn_summary_format": "%(country)s počasí po dobu 10 dnů v každém městě",
