--- a/locales/hu.json
+++ b/locales/hu.json
@@ -151,7 +151,7 @@
     "views": "nézetek",
     "weather_hu_app_name": "Ournet Időjárás",
     "weather_hu_short_app_name": "Időjárás",
-    "weather_cright": "Időjárás előrejelzés a met.no",
+    "weather_cright": "Időjárás előrejelzés a MET Norway",
     "weather_for_10days": "Időjárás előrejelzés 10 napra",
     "weather_home_title_format": "Időjárás %(name)s 10 napig",
     "weather_in_cn_summary_format": "Időjárás %(country)s 10 napra bármely városban",
