--- a/locales/it.json
+++ b/locales/it.json
@@ -151,7 +151,7 @@
     "views": "visualizzazioni",
     "weather_it_app_name": "Ournet Meteo",
     "weather_it_short_app_name": "Meteo",
-    "weather_cright": "Previsioni meteo fornite da met.no",
+    "weather_cright": "Previsioni meteo fornite da MET Norway",
     "weather_for_10days": "Previsioni meteo per 10 giorni",
     "weather_home_title_format": "Meteo %(name)s per 10 giorni",
     "weather_in_cn_summary_format": "Meteo %(country)s per 10 giorni in qualsiasi città",
