--- a/locales/ro.json
+++ b/locales/ro.json
@@ -160,7 +160,7 @@
     "weather_ro_short_app_name": "Meteo",
     "weather_md_app_name": "Click Meteo",
     "weather_md_short_app_name": "Meteo",
-    "weather_cright": "Prognoza meteo oferită de met.no",
+    "weather_cright": "Prognoza meteo oferită de MET Norway",
     "weather_for_10days": "Prognoza meteo pentru 10 zile",
     "weather_home_title_format": "Vremea in %(name)s pentru 10 zile",
     "weather_in_cn_summary_format": "Prognoza meteo in %(country)s pentru 10 zile in orice localitate",
