--- a/locales/ru.json
+++ b/locales/ru.json
@@ -160,7 +160,7 @@
     "weather_ru_short_app_name": "Погода",
     "weather_md_app_name": "Click Погода",
     "weather_md_short_app_name": "Погода",
-    "weather_cright": "Прогноз погоды предоставляемый met.no",
+    "weather_cright": "Прогноз погоды предоставляемый MET Norway",
     "weather_for_10days": "Прогноз погоды на 10 дней",
     "weather_home_title_format": "Погода в %(name)s на 10 дней",
     "weather_in_cn_summary_format": "Погода в %(country)s на 10 дней в любом городе",
