--- a/locales/sq.json
+++ b/locales/sq.json
@@ -151,7 +151,7 @@
     "views": "shikime",
     "weather_al_app_name": "Moti2.al",
     "weather_al_short_app_name": "Moti2",
-    "weather_cright": "Parashikimi i motit parashikuar nga met.no",
+    "weather_cright": "Parashikimi i motit parashikuar nga MET Norway",
     "weather_for_10days": "Parashikimi i motit për 10 ditë",
     "weather_home_title_format": "Moti në %(name)s për 10 ditë",
     "weather_in_cn_summary_format": "Moti në %(country)s për 10 ditë në çdo qytet",
