#ccc search control boders

--- a/locales/sq.json
+++ b/locales/sq.json
@@ -157,8 +157,8 @@
     "weather_in_cn_summary_format": "Moti në %(country)s për 10 ditë në çdo qytet",
     "weather_in_format": "Moti në %(name)s",
     "weather_notifications_subscribe_for_place_format": "Regjistrohu për alarm: %(name)s",
-    "weather_on_your_site_info_format": "Vendoseni motin në faqen tuaj për çdo lokalitet në %(country)s.",
-    "weather_on_your_site": "Moti në faqen tuaj",
+    "weather_on_your_site_info_format": "Moti parashikohet në web faqen tuaj për çdo vend në %(country)s.",
+    "weather_on_your_site": "Moti në web faqen tuaj",
     "weather_place_description_format": "Parashikimi i motit në %(name1)s, %(name2)s - sot, nesër, 10 ditë, 7 ditë",
     "weather_place_details_info_format": "Moti në %(name1)s, %(name2)s moti sot, nesër, 3 ditë, 7 ditë, 10 ditë, 15 ditë, këto ditë. Parashikimi %(name3)s.",
     "weather_place_title_format_10days_format": "Moti në %(name1)s, parashikimi i motit %(name2), 10 ditë",
