--- a/locales/cs.json
+++ b/locales/cs.json
@@ -21,6 +21,7 @@
     "country_ro": "Rumunsko",
     "country_ru": "Rusko",
     "country_tr": "Turecko",
+    "country_lv": "Lotyšsko",
     "daily_horoscope_details_format": "Denní horoskop: %(name)s.",
     "daily_horoscope_details": "Denní horoskop. Horoskop pro dnešek a zítra.",
     "daily_horoscope_format": "Horoskop: %(name)s",
