--- a/locales/it.json
+++ b/locales/it.json
@@ -21,6 +21,7 @@
     "country_ro": "Romania",
     "country_ru": "Russia",
     "country_tr": "Turchia",
+    "country_lv": "Lettonia",
     "daily_horoscope_details_format": "Oroscopo di oggi %(name)s.",
     "daily_horoscope_details": "Oroscopo del giorno. Oroscopo di oggi e di domani.",
     "daily_horoscope_format": "Oroscopo: %(name)s",
