--- a/locales/hu.json
+++ b/locales/hu.json
@@ -21,6 +21,7 @@
     "country_ro": "Románia",
     "country_ru": "Oroszország",
     "country_tr": "Törökország",
+    "country_lv": "Lettország",
     "daily_horoscope_details_format": "Hapi horoszkóp: %(name)s.",
     "daily_horoscope_details": "Hapi horoszkóp. Horoszkóp ma és holnap.",
     "daily_horoscope_format": "Horoszkóp: %(name)s",
