--- a/locales/sq.json
+++ b/locales/sq.json
@@ -21,6 +21,7 @@
     "country_ro": "Rumani",
     "country_ru": "Rusi",
     "country_tr": "Turqi",
+    "country_lv": "Letoni",
     "daily_horoscope_details_format": "Daily Horoscope: %(name)s.",
     "daily_horoscope_details": "Daily Horoscope. Today/Tomorrow horoscope.",
     "daily_horoscope_format": "Horoscope: %(name)s",
