--- a/locales/tr.json
+++ b/locales/tr.json
@@ -21,6 +21,7 @@
     "country_ro": "Romanya",
     "country_ru": "Rusya",
     "country_tr": "Türkiye",
+    "country_lv": "Letonya",
     "daily_horoscope_details_format": "Günlük Burç: %(name)s.",
     "daily_horoscope_details": "Günlük Burç Yorumları. Bugün ve Yarın burç.",
     "daily_horoscope_format": "Burçlar: %(name)s",
