weather right ad on top

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -72,7 +72,7 @@
     "important_news": "Важные новости",
     "important": "Важные",
     "in_country_md": "Молдова",
-    "in_country_ru": "Россия",
+    "in_country_ru": "России",
     "info": "Информация",
     "international": "Другие страны",
     "invalid_email": "Неверный адрес электронной почты!",
