--- a/locales/en.json
+++ b/locales/en.json
@@ -125,6 +125,7 @@
     "read_more_on_source_format": "Read on %(name)s",
     "recent_search": "Recent searches",
     "related_news": "Related News",
+    "save": "Save",
     "search_place_format": "Search results by: %(name)s",
     "search_place_in_adm_cn_format": "Search for place in %(region)s, %(country)s",
     "search_place_in_cn_format": "Search for place in %(country)s",
