horo: health, love, success done

--- a/locales/ro.json
+++ b/locales/ro.json
@@ -16,12 +16,12 @@
     "country_hu": "Ungaria",
     "country_in": "India",
     "country_it": "Italia",
+    "country_lv": "Letonia",
     "country_md": "Moldova",
     "country_pl": "Polonia",
     "country_ro": "România",
     "country_ru": "Rusia",
     "country_tr": "Turcia",
-    "country_lv": "Letonia",
     "daily_horoscope_details_format": "Horoscopul pentru astăzi %(name)s.",
     "daily_horoscope_details": "Horoscop zilnic. Horoscopul pentru astăzi și mâine.",
     "daily_horoscope_format": "Horoscop: %(name)s",
@@ -46,14 +46,11 @@
     "generate": "Generează",
     "head_back_color": "Titlu culoare fundal",
     "head_text_color": "Titlu culoare text",
+    "health": "Sănătate",
     "heigth": "Înălțime",
     "home": "Acasă",
     "horizontal": "Orizontal",
     "horo_api_title": "Preluare horoscop",
-    "horoscope_ro_app_name": "Ournet Horoscop",
-    "horoscope_ro_short_app_name": "Horoscop",
-    "horoscope_md_app_name": "Click Horoscop",
-    "horoscope_md_short_app_name": "Horoscop",
     "horo_notifications_subscribe_for_sign_format": "%(name)s: Primește notificări zilnice",
     "horo_on_your_site_info": "Horoscopul zilnic gratuit pe site-ul tău",
     "horo_on_your_site": "Horoscopul pe site-ul tău",
@@ -62,6 +59,10 @@
     "horo_sign_date_format": "D MMM",
     "horo_sign_weekly_details_format": "%(sign)s. Horoscopul săptămânii: %(date)s",
     "horo_sign_weekly_title_format": "%(sign)s: Horoscop săptămânal",
+    "horoscope_md_app_name": "Click Horoscop",
+    "horoscope_md_short_app_name": "Horoscop",
+    "horoscope_ro_app_name": "Ournet Horoscop",
+    "horoscope_ro_short_app_name": "Horoscop",
     "horoscope": "Horoscop",
     "hour": "Ora",
     "html_code": "Codul HTML",
@@ -91,6 +92,7 @@
     "latest_quotes": "Ultimele declarații",
     "line_color": "Culoare linii",
     "load_more_places": "Mai multe localităţi",
+    "love": "Dragoste",
     "lucky_numbers": "Numere norocoase",
     "max": "max",
     "min": "min",
@@ -99,10 +101,10 @@
     "more_quotes": "Mai multe declarații",
     "more": "Mai mult",
     "most_important_news_in_last_7days_country_format": "Cele mai importante știri din presa din %(country)s pentru ultimele 7 zile",
-    "news_ro_app_name": "Ournet Știri",
-    "news_ro_short_app_name": "Știri",
     "news_md_app_name": "Click Știri",
     "news_md_short_app_name": "Știri",
+    "news_ro_app_name": "Ournet Știri",
+    "news_ro_short_app_name": "Știri",
     "news_site_description_format": "Toate știrile din %(country)s. Evenimente, declarații, tendințe.",
     "news_site_title_format": "Ultimele știri din %(country)s",
     "news_sources": "Surse de știri",
@@ -143,6 +145,7 @@
     "show_header": "Cu titlu",
     "subscribe_to_daily_notifications": "Abonează-te la notificări zilnice",
     "subscribe": "Abonare",
+    "success": "Succes",
     "temperature": "Temperatura",
     "text_color": "Text color",
     "today": "Astăzi",
@@ -158,15 +161,13 @@
     "video_news": "Video știri",
     "video": "Video",
     "views": "vizualizări",
-    "weather_ro_app_name": "Ournet Meteo",
-    "weather_ro_short_app_name": "Meteo",
-    "weather_md_app_name": "Click Meteo",
-    "weather_md_short_app_name": "Meteo",
     "weather_cright": "Prognoza meteo oferită de MET Norway",
     "weather_for_10days": "Prognoza meteo pentru 10 zile",
     "weather_home_title_format": "Vremea in %(name)s pentru 10 zile",
     "weather_in_cn_summary_format": "Prognoza meteo in %(country)s pentru 10 zile in orice localitate",
     "weather_in_format": "Vremea în %(name)s",
+    "weather_md_app_name": "Click Meteo",
+    "weather_md_short_app_name": "Meteo",
     "weather_notifications_subscribe_for_place_format": "Abonează-te la alerte meteo pentru %(name)s",
     "weather_on_your_site_info_format": "Pune vremea pe site-ul tău pentru orice localitate din %(country)s.",
     "weather_on_your_site": "Vremea pe site-ul tău",
@@ -174,6 +175,8 @@
     "weather_place_details_info_format": "Prognoza meteo in %(name1)s, vremea la %(name2)s, azi, maine, poimaine, 3 zile, 7 zile, 10 zile, urmatoarele zile. Starea vremii in %(name3)s.",
     "weather_place_title_format_10days_format": "Vremea in %(name1)s, prognoza meteo in %(name2)s, 10 zile",
     "weather_place_title_format": "Vremea in %(name1)s, prognoza meteo in %(name2)s",
+    "weather_ro_app_name": "Ournet Meteo",
+    "weather_ro_short_app_name": "Meteo",
     "weather": "Vremea",
     "weather2": "Meteo",
     "weekly_horoscope_details_format": "Horoscop săptămânal: %(date)s.",
