translated: horo stats

--- a/locales/bg.json
+++ b/locales/bg.json
@@ -173,5 +173,8 @@
     "weekly_horoscope": "Седмичен хороскоп",
     "weekly": "Седмичен",
     "width": "Широчина",
+    "love":"Обичам",
+    "health": "Здраве",
+    "success": "Успех",
     "wind": "Вятър"
 }
