--- a/locales/cs.json
+++ b/locales/cs.json
@@ -173,5 +173,8 @@
     "weekly_horoscope": "Týdenní horoskop",
     "weekly": "Týdně",
     "width": "Šířka",
+    "love":"Milovat",
+    "health": "Zdraví",
+    "success": "Úspěch",
     "wind": "Vítr"
 }
