--- a/locales/en.json
+++ b/locales/en.json
@@ -173,5 +173,8 @@
     "weekly_horoscope": "Weekly Horoscope",
     "weekly": "Weekly",
     "width": "Width",
+    "love": "Love",
+    "health": "Health",
+    "success": "Success",
     "wind": "Wind"
 }
