--- a/locales/hu.json
+++ b/locales/hu.json
@@ -173,5 +173,8 @@
     "weekly_horoscope": "Heti horoszkóp",
     "weekly": "Heti",
     "width": "Szélesség",
+    "love": "Szeretet",
+    "health": "Egészség",
+    "success": "Siker",
     "wind": "Szél"
 }
