--- a/locales/it.json
+++ b/locales/it.json
@@ -173,5 +173,8 @@
     "weekly_horoscope": "Oroscopo settimanale",
     "weekly": "Settimanale",
     "width": "Larghezza",
+    "love": "Amore",
+    "health": "Salute",
+    "success": "Successo",
     "wind": "Vento"
 }
