--- a/locales/lv.json
+++ b/locales/lv.json
@@ -173,5 +173,8 @@
     "weekly_horoscope": "Weekly Horoscope",
     "weekly": "Weekly",
     "width": "Platums",
+    "love": "Mīlestība",
+    "health": "Veselība",
+    "success": "Panākumi",
     "wind": "Vējš"
 }
