--- a/locales/ru.json
+++ b/locales/ru.json
@@ -182,5 +182,8 @@
     "weekly_horoscope": "Еженедельный гороскоп",
     "weekly": "Еженедельно",
     "width": "Ширина",
+    "love": "Любить",
+    "health": "Здоровье",
+    "success": "Успех",
     "wind": "Ветер"
 }
