--- a/locales/sq.json
+++ b/locales/sq.json
@@ -173,5 +173,8 @@
     "weekly_horoscope": "Weekly Horoscope",
     "weekly": "Weekly",
     "width": "Width",
+    "love": "Dashuri",
+    "health": "Shëndetësor",
+    "success": "Sukses",
     "wind": "Era"
 }
