--- a/locales/tr.json
+++ b/locales/tr.json
@@ -173,5 +173,8 @@
     "weekly_horoscope": "Weekly Horoscope",
     "weekly": "Haftalık",
     "width": "Genişlik",
+    "love": "Aşk",
+    "health": "Sağlık",
+    "success": "Başarı",
     "wind": "Rüzgar"
 }
