weather added KZ

--- a/locales/bg.json
+++ b/locales/bg.json
@@ -22,6 +22,7 @@
     "country_ru": "Русия",
     "country_tr": "Турция",
     "country_lv": "Латвия",
+    "country_kz": "Казахстан",
     "daily_horoscope_details_format": "Хороскоп за деня %(name)s.",
     "daily_horoscope_details": "Ежедневен хороскоп. Хороскоп за днес и утре.",
     "daily_horoscope_format": "Хороскоп: %(name)s",
