--- a/locales/ru.json
+++ b/locales/ru.json
@@ -22,6 +22,7 @@
     "country_ru": "Россия",
     "country_tr": "Турция",
     "country_lv": "Латвия",
+    "country_kz": "Казахстан",
     "daily_horoscope_details_format": "Гороскоп на сегодня %(name)s.",
     "daily_horoscope_details": "Ежедневный гороскоп. Гороскоп на сегодня и завтра.",
     "daily_horoscope_format": "Гороскоп: %(name)s",
@@ -73,6 +74,7 @@
     "important": "Важные",
     "in_country_md": "Молдова",
     "in_country_ru": "России",
+    "in_country_kz": "Казахстане",
     "info": "Информация",
     "international": "Другие страны",
     "invalid_email": "Неверный адрес электронной почты!",
@@ -162,6 +164,8 @@
     "weather_ru_short_app_name": "Погода",
     "weather_md_app_name": "Click Погода",
     "weather_md_short_app_name": "Погода",
+    "weather_kz_app_name": "Meteo2 Погода",
+    "weather_kz_short_app_name": "Погода",
     "weather_cright": "Прогноз погоды предоставляемый MET Norway",
     "weather_for_10days": "Прогноз погоды на 10 дней",
     "weather_home_title_format": "Погода в %(name)s на 10 дней",
