--- a/locales/tr.json
+++ b/locales/tr.json
@@ -22,6 +22,7 @@
     "country_ru": "Rusya",
     "country_tr": "Türkiye",
     "country_lv": "Letonya",
+    "country_kz": "Kazakistan",
     "daily_horoscope_details_format": "Günlük Burç: %(name)s.",
     "daily_horoscope_details": "Günlük Burç Yorumları. Bugün ve Yarın burç.",
     "daily_horoscope_format": "Burçlar: %(name)s",
