--- a/locales/cs.json
+++ b/locales/cs.json
@@ -22,6 +22,7 @@
     "country_ru": "Rusko",
     "country_tr": "Turecko",
     "country_lv": "Lotyšsko",
+    "country_kz": "Kazachstán",
     "daily_horoscope_details_format": "Denní horoskop: %(name)s.",
     "daily_horoscope_details": "Denní horoskop. Horoskop pro dnešek a zítra.",
     "daily_horoscope_format": "Horoskop: %(name)s",
