--- a/locales/en.json
+++ b/locales/en.json
@@ -22,6 +22,7 @@
     "country_ru": "Russia",
     "country_tr": "Turkey",
     "country_lv": "Latvia",
+    "country_kz": "Kazakhstan",
     "daily_horoscope_details_format": "Daily Horoscope: %(name)s.",
     "daily_horoscope_details": "Daily Horoscope. Today/Tomorrow horoscope.",
     "daily_horoscope_format": "Horoscope: %(name)s",
