--- a/locales/lv.json
+++ b/locales/lv.json
@@ -22,6 +22,7 @@
     "country_ru": "Krievija",
     "country_tr": "Turcija",
     "country_lv": "Latvija",
+    "country_kz": "Kazahstāna",
     "daily_horoscope_details_format": "Daily Horoscope: %(name)s.",
     "daily_horoscope_details": "Daily Horoscope. Today/Tomorrow horoscope.",
     "daily_horoscope_format": "Horoscope: %(name)s",
