--- a/locales/ro.json
+++ b/locales/ro.json
@@ -22,6 +22,7 @@
     "country_ro": "România",
     "country_ru": "Rusia",
     "country_tr": "Turcia",
+    "country_kz": "Kazahstan",
     "daily_horoscope_details_format": "Horoscopul pentru astăzi %(name)s.",
     "daily_horoscope_details": "Horoscop zilnic. Horoscopul pentru astăzi și mâine.",
     "daily_horoscope_format": "Horoscop: %(name)s",
