--- a/locales/sq.json
+++ b/locales/sq.json
@@ -22,6 +22,7 @@
     "country_ru": "Rusi",
     "country_tr": "Turqi",
     "country_lv": "Letoni",
+    "country_kz": "Kazahstan",
     "daily_horoscope_details_format": "Daily Horoscope: %(name)s.",
     "daily_horoscope_details": "Daily Horoscope. Today/Tomorrow horoscope.",
     "daily_horoscope_format": "Horoscope: %(name)s",
